# code-explorer

./: .gitignore  Cargo.toml  README.md
assets/: languages.generated.json
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/app/ui/: app.slint
crates/core/: Cargo.toml
crates/core/src/: filter.rs  language.rs  lib.rs  scan.rs  tree.rs  treemap.rs  visualization.rs
crates/git/: Cargo.toml
crates/git/src/: lib.rs
tools/convert-linguist-languages/: Cargo.toml
tools/convert-linguist-languages/src/: main.rs
