[workspace]
members = [
    "crates/app",
    "crates/core",
    "crates/git",
    "tools/convert-linguist-languages",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://example.invalid/code-explorer"

[workspace.dependencies]
anyhow = "1"
dirs = "6"
git2 = { version = "0.20", default-features = false, features = ["https"] }
ignore = "0.4"
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
slint = "1.14"
rfd = "0.15"
tempfile = "3"
thiserror = "2"
tokei = "12"
walkdir = "2"
